--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
+	"jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
 	"scripts": {
 		"start": "node src/index.js",
 		"dev": "nodemon src/index.js",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "jest --testTimeout=10000 "
 	},
 	"keywords": [],
 	"author": "",
@@ -18,6 +24,8 @@
 		"mongoose": "^5.8.0"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.2"
+		"jest": "^25.1.0",
+		"nodemon": "^2.0.2",
+		"supertest": "^4.0.2"
 	}
 }
